2011-01-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Make zombie log message match current OSX.

2011-01-06  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSObject.m (GSAtomicIncrement, GSAtomicDecrement): MIPS64
	specific adjustment of atomic functions for mips.
	Patch by Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>.

2011-01-01 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/Foundation/NSCalendar.h:
	* Source/NSCalendar.m: Added NSCoding and NSCopying.
	* Source/NSLocale.m: Implement -isEqual: and do a better job of copying.

2011-01-01 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/Foundation/NSCalendar.h:
	* Source/NSLocale.m: Minor fixes.
	* Source/NSCalendar.m: Implemented +currentCalendar.

2011-01-01 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSLocale.m: Fixed typos found by testsuite.

2010-12-31 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSCalendar.m: Implemented -dateByAddingComponents:toDate:options:
	and -dateFromComponents:.

2010-12-31 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/Foundation/NSCalendar.h:
	* Source/NSCalendar.m: Added iOS 4.0 and later methods to NSDateComponents.

2010-12-31 Stefan Bidigaray <stefanbidi@gmail.com>

	* Resources/GNUmakefile:
	* Resources/Languages/Locale.canonical: Added mapping to go from long
	locale identifiers to the shorter identifiers used by ICU.
	* Source/NSLocale.m: Implemented -canonical* and -preferredLanaguges methods.

2010-12-31 14:03  David Chisnall <theraven@gna.org>

	* libs/base/trunk/Headers/Foundation/NSBundle.h: Add __attribute__
	  ((format_arg)) to [NSBundle -localizedStringForKey:value:table:].
	  This informs the compiler that the output can be used anywhere
	  that the first argument can be used, and should silence all of
	  the non-constant format string warnings that we get anywhere that
	  _(@"foo") or similar is used.

2010-12-27  Nicola Pero <nicola.pero@meta-innovation.com>
