@@ -1,6 +1,8 @@
 2011-01-07  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSObject.m: Make zombie log message match current OSX.
+	* Source/NSURL.m: Fix -resourceSpecifier by removing incorrect
+	special handling for file URLs.
 
 2011-01-06  Fred Kiefer <FredKiefer@gmx.de>
 
